fix horizontal scroll on overview page

--- a/src/index.css
+++ b/src/index.css
@@ -344,9 +344,6 @@ button {
 
 .made-easy-img {
 	width: 100%;
-	position: relative;
-	left: 200px;
-	padding-right: 400px;
 }
 
 /* Blog Card Styling */
